<resources>
    <string name="app_name">popa</string>
    <string name="sync">sync</string>
    <string name="statistics">Statistics</string>
    <string name="diary">Diary</string>
    <string name="settings">Settings</string>
    <string name="pet">Pet</string>
    <string name="information">Information</string>
    <string name="sensor">Sensor</string>
    <string name="status_label">Status:</string>
    <string name="mac_address_label">MAC:</string>
    <string name="mac_address">E0:CE:8F:84:D5:4F</string>
    <string name="connect_sensor">Connect Sensor</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="smartwatch">Smart Watch</string>
    <string name="connect_watch">Connect Watch</string>
    <string name="general">General</string>
    <string name="activate_pet">Activate pet mode</string>
    <string name="yourBattlePet">Your battle pet</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="q_gender">What is your gender?</string>
    <string name="q_age">How old are you?</string>
    <string name="q_painLocation">Where do you have pain?</string>
    <string name="swipeInfo">Please swipe for the next question</string>
    <string name="lowerBack">Lower back</string>
    <string name="sacrum">Sacrum</string>
    <string name="shoulderArea">Shoulder area</string>
    <string name="otherArea">Other spine area</string>
    <string name="noPain">No pain</string>
    <string name="painToday">How is your pain today?</string>
    <string name="scale">From 0 (best) to 10 (worst).</string>
    <string name="scaleReverse">From 0 (worst) to 10 (best).</string>
    <string name="moodToday">How is your mood today?</string>
    <string name="sleep">How did you sleep last night?</string>
    <string name="step1">Step 1 of 5</string>
    <string name="step2">Step 2 of 5</string>
    <string name="step3">Step 3 of 5</string>
    <string name="step4">Step 4 of 5</string>
    <string name="step5">Step 5 of 5</string>
    <string name="loginFinish">Thank you for your information. Now let us get started with POPA!</string>
    <string name="resetPassword">Reset Password</string>
    <string name="logOut">Log Out</string>
    <string name="sensorData">Sensor Data</string>
    <string name="posture_data">Sensor data</string>
    <string name="app_name_big">POPA</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="cmkg">CM / KG</string>
    <string name="email">E-Mail:</string>
    <string name="cancel">Cancel</string>
    <string name="addDiaryEntry">Add</string>
    <string name="informationStart">What do you want to know about the posture? \nPlease select an information section from below:</string>
    <string name="tips">Tips to improve your posture</string>
    <string name="clothes">How clothes can change your posture</string>
    <string name="dailyExercises">Daily Exercises</string>
    <string name="postureImportance">Why posture is so important</string>
    <string name="postureImportance1">Having good posture is about more than looking good. It helps you to develop strength, flexibility, and
        balance in your body. These can all lead to less muscle pain and more energy throughout the day. Proper posture also reduces stress on
        your muscles and ligaments, which can reduce your risk of injury.</string>
    <string name="postureImportance2">Improving your posture also helps you become more aware of your muscles, making it easier to correct your
        own posture. As you work on your posture and become more aware of your body, you might even notice some imbalances or areas of tightness
        you weren’t previously aware of.</string>
    <string name="headstraight">Keep your head straight</string>
    <string name="headstraightexpl">Your ears should be in line with your shoulders.</string>
    <string name="sitback">Sit back</string>
    <string name="sitbackexpl">Make sure your bum is all the way back in your chair.</string>
    <string name="shoulderback">Pull your shoulders back</string>
    <string name="shoulderbackexpl">Rolling your shoulders back and then down will open up your chest and improve your posture.</string>
    <string name="strengthen">Strengthen your core, hips and shoulders</string>
    <string name="strengthenexpl">Doing strengthening exercises will help you build up the muscles you need to keep your body upright and
        properly supported.</string>
    <string name="walk">Walk</string>
    <string name="walkexpl">If you work at a desk all day make sure to get up and walk around at least every 30 minutes. This will help relieve
        the stress that sitting places on the spine.</string>
    <string name="sneakers">1. Do wear sneakers</string>
    <string name="sneakersexpl">Good and comfortable shoes are very supporting for a good and health posture. Be aware that shoes like high
        heels should be avoided.</string>
    <string name="backpack">2. Do wear a backpack</string>
    <string name="backpackexpl">The weight of your bag should be evenly distributed. Therefore, a backpack is recommended instead of a handbag.</string>
    <string name="ex1">1. Child\'s pose</string>
    <string name="ex2">2. Forward fold</string>
    <string name="ex3">3. Cat cow</string>
    <string name="ex4">4. Standing cat cow</string>
    <string name="ex5">5. High plank</string>
    <string name="ex6">6. Side plank</string>
    <string name="ex7">7. Downward-facing dog</string>
    <string name="steps">Steps</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="pulse">--</string>
    <string name="childpose">This resting pose stretches and lengthens your spine, glutes, and hamstrings. The child’s pose helps to release tension in your lower back and neck.</string>
    <string name="cp1">Sit on your shinbones with your knees together, your big toes touching, and your heels splayed out to the side.</string>
    <string name="cp2">Fold forward at your hips and walk your hands out in front of you.</string>
    <string name="cp3">Sink your hips back down toward your feet. If your thighs won’t go all the way down, place a pillow or folded blanket under them for support.</string>
    <string name="cp4">Gently place your forehead on the floor or turn your head to one side.</string>
    <string name="cp5">Keep your arms extended or rest them along your body.</string>
    <string name="cp6">Breathe deeply into the back of your rib cage and waist.</string>
    <string name="cp7">Relax in this pose for up to 5 minutes while continuing to breathe deeply.</string>
    <string name="forwardfold">This standing stretch releases tension in your spine, hamstrings, and glutes. It also stretches your hips and legs. While doing this stretch, you should feel the entire back side of your body opening up and lengthening.</string>
    <string name="ff1">Stand with your big toes touching and your heels slightly apart.</string>
    <string name="ff2">Bring your hands to your hips and fold forward at your hips.</string>
    <string name="ff3">Release your hands toward the floor or place them on a block. Don’t worry if your hands don’t touch the ground — just go as far as you can.</string>
    <string name="ff4">Bend your knees slightly, soften your hips joints, and allow your spine to lengthen.</string>
    <string name="ff5">Tuck your chin into your chest and allow your head to fall heavy to the floor.</string>
    <string name="ff6">Remain in this pose for up to 1 minute.</string>
    <string name="catcow">Practicing cat cow stretches and massages your spine. It also helps to relieve tension in your torso, shoulders, and neck while promoting blood circulation.</string>
    <string name="cc1">Come onto your hands and knees with your weight balanced evenly between all four points.</string>
    <string name="cc2">Inhale to look up, dropping your abdomen down toward the ground as you extend your spine.</string>
    <string name="cc3">Exhale and arch your spine toward the ceiling and tuck your chin into your chest.</string>
    <string name="cc4">Continue this movement for at least 1 minute.</string>
    <string name="standingcatcow">Doing the cat cow stretch while standing helps to loosen up tightness in your back, hips, and glutes.</string>
    <string name="scc1">Stand with your feet about hip-width apart with a slight bend in your knees.</string>
    <string name="scc2">Extend your hands in front of you or place them on your thighs.</string>
    <string name="scc3">Lengthen your neck, bring your chin toward your chest, and round your spine.</string>
    <string name="scc4">Then look up, lift your chest, and move your spine in the opposite direction.</string>
    <string name="scc5">Hold each position for 5 breaths at a time.</string>
    <string name="scc6">Continue this movement for a few minutes.</string>
    <string name="highplank">The high plank pose helps to relieve pain and stiffness throughout your body while strengthening your shoulders, glutes, and hamstrings. It also helps you develop balance and strength in your core and back, both important for good posture.</string>
    <string name="hp1">Come onto all fours and straighten your legs, lift your heels, and raise your hips.</string>
    <string name="hp2">Straighten your back and engage your abdominal, arm, and leg muscles.</string>
    <string name="hp3">Lengthen the back of your neck, soften your throat, and look down at the floor.</string>
    <string name="hp4">Make sure to keep your chest open and your shoulders back.</string>
    <string name="hp5">Hold this position for up to 1 minute at a time.</string>
    <string name="sideplank">You can use a side plank to maintain the neutral alignment of your spine and legs. This energizing pose works the muscles in your sides and glutes. Strengthening and aligning these muscles helps to support your back and improve posture.</string>
    <string name="sp1">From a high plank position, bring your left hand slightly in to center.</string>
    <string name="sp2">Shift your weight onto your left hand, stack your ankles, and lift your hips.</string>
    <string name="sp3">Place your right hand on your hip or extend it up toward the ceiling.</string>
    <string name="sp4">You can drop your left knee down to the floor for extra support.</string>
    <string name="sp5">Engage your abdominals, side body, and glutes as you maintain this pose.</string>
    <string name="developers">Developers</string>
    <string name="developersExpl">This application was developed within the module \"Clinical Applications for Tablets\" by the following students:</string>
    <string name="aescj1">- Jan Philippe Aeschimann, aescj1@bfh.ch</string>
    <string name="bauej1">- Jan Gabriel Bauer, bauej1@bfh.ch</string>
    <string name="meiel6">- Lea Meier, meiel6@bfh.ch</string>
    <string name="bfh">Bern University of Applied Sciences \nEngineering and Information Technology \nMedical Informatics \nHöheweg 80 \nCH-2502 Biel/Bienne</string>
    <string name="sources">Sources</string>
    <string name="sourcesExpl">The following sources were used for the development of this application.</string>
    <string name="imprPostureImportant">https://www.healthline.com/health/posture-exercises</string>
    <string name="imprDailyExercises">https://www.healthline.com/health/posture-exercises</string>
    <string name="imprImprovePosture">https://www.pthealth.ca/blog/6-posture-fixes-that-will-set-you-straight/</string>
</resources>