<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:background="@color/appBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/step3"
        android:textColor="@color/textColorLight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="100dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:paddingBottom="3dp"
            android:text="@string/q_painLocation"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="27dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/elementBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="17"
            app:srcCompat="@drawable/body" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingRight="10dp">

            <ToggleButton
                android:id="@+id/b_shoulder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:textOff="@string/shoulderArea"
                android:textOn="@string/shoulderArea" />

            <ToggleButton
                android:id="@+id/b_lowerBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_selector"
                android:textOff="@string/lowerBack"
                android:textOn="@string/lowerBack" />

            <ToggleButton
                android:id="@+id/b_sacrum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_selector"
                android:textOff="@string/sacrum"
                android:textOn="@string/sacrum" />

            <ToggleButton
                android:id="@+id/b_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_selector"
                android:textOff="@string/otherArea"
                android:textOn="@string/otherArea" />

            <ToggleButton
                android:id="@+id/b_noPain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_selector"
                android:textOff="@string/noPain"
                android:textOn="@string/noPain" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
