<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageButton
            android:id="@+id/bReload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:background="@color/appBackground"
            app:srcCompat="@drawable/reload" />

        <TextView
            android:id="@+id/popa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:text="@string/app_name_big"
            android:textAlignment="center"
            android:textColor="@color/tileBackground"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/sync"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:text="@string/sync" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/postureChartLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="90"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tPostureChartLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/posture_data"
            android:textColor="@color/tileBackground"
            android:textSize="19dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barchart_posture_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <include layout="@layout/loading_overlay" />
</LinearLayout>
